.provarCaches/00D410000011HE0EAM/objects/rstk__porcpt_ui__c.object
<CustomObject>
    <description>porcpt_ui__c</description>
    <fields>
        <fullName>rstk__dtl_errormessage__c</fullName>
        <inlineHelpText>UI error message</inlineHelpText>
        <label>dtl_errormessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_ispartialbackflush__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dtl_ispartialbackflush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_loccomments__c</fullName>
        <inlineHelpText>UI selected location comments</inlineHelpText>
        <label>dtl_loccomments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>UI selected receipt to Location ID</inlineHelpText>
        <label>dtl_locid</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts</relationshipLabel>
        <relationshipName>ZZ_PO_Rcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_locnum__c</fullName>
        <inlineHelpText>UI selected receipt to Location Number</inlineHelpText>
        <label>dtl_locnum</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_lotexpirationdate__c</fullName>
        <inlineHelpText>UI selected Lot Expiration Date</inlineHelpText>
        <label>dtl_lotexpirationdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_lotno__c</fullName>
        <inlineHelpText>UI selected Lot Number</inlineHelpText>
        <label>dtl_lotno</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_lotref__c</fullName>
        <label>Lot Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_performpartialbackflush__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dtl_performpartialbackflush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_polineid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>UI display PO Line Number</inlineHelpText>
        <label>dtl_polineid</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts (dtl_polineid)</relationshipLabel>
        <relationshipName>ZZ_PO_Rcpts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_qtyrcvd__c</fullName>
        <inlineHelpText>UI selected Quantity Received</inlineHelpText>
        <label>dtl_qtyrcvd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_rcptno__c</fullName>
        <label>dtl_rcptno</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_srlnos__c</fullName>
        <inlineHelpText>UI selected received serial number(s)</inlineHelpText>
        <label>dtl_srlnos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_txncomments__c</fullName>
        <label>dtl_txncomments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dtl_uniquekey__c</fullName>
        <label>dtl_uniquekey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptline_batchnumber__c</fullName>
        <label>Batch Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptline_lotexpirationdate__c</fullName>
        <inlineHelpText>UI selected Lot Expiration Date</inlineHelpText>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__porcptline_lotno__c</fullName>
        <inlineHelpText>UI selected Lot Number</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptline_lotref__c</fullName>
        <label>Lot Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptline_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the PO line for this PO Receipt</inlineHelpText>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>PO Line - PO Rcpt</relationshipLabel>
        <relationshipName>PO_Line_PO_Rcpt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptline_rcptno__c</fullName>
        <label>porcptline_rcptno</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptline_receiptqty__c</fullName>
        <inlineHelpText>This is the PO Receipt Quantity</inlineHelpText>
        <label>Receipt Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_errormessage__c</fullName>
        <inlineHelpText>UI server error message</inlineHelpText>
        <label>porcptr_errormessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_hdrordno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>UI display PO Number</inlineHelpText>
        <label>PO Number</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts (porcptr_hdrordno)</relationshipLabel>
        <relationshipName>ZZ_PO_Rcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>UI display PO Line Number</inlineHelpText>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts (porcptr_poline)</relationshipLabel>
        <relationshipName>ZZ_PO_Rcpts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_porcptcst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Receipt number to be reversed.</inlineHelpText>
        <label>PO Receipt Number</label>
        <referenceTo>rstk__porcptcst__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts</relationshipLabel>
        <relationshipName>ZZ_PO_Rcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_porlocdtl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>UI receipt location detail</inlineHelpText>
        <label>porcptr_porlocdtl</label>
        <referenceTo>rstk__porlocdtl__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts</relationshipLabel>
        <relationshipName>ZZ_PO_Rcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_qty__c</fullName>
        <inlineHelpText>This is the PO Receipt Quantity</inlineHelpText>
        <label>Reverse Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_qtyacc__c</fullName>
        <inlineHelpText>This is the Quantity Accepted on this PO Receipt.</inlineHelpText>
        <label>Qty Received</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_qtyrtv__c</fullName>
        <inlineHelpText>This is the Quantity Returned to Vendor on this PO Receipt.</inlineHelpText>
        <label>Qty RTV</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_rcptno__c</fullName>
        <inlineHelpText>This is the PO Receipt Number</inlineHelpText>
        <label>porcptr_rcptno</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_rtvind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the reversal quantity will increment the Quantity Returned to Vendor.</inlineHelpText>
        <label>RTV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>UI selected receipt lines</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_srlporlocdtls__c</fullName>
        <inlineHelpText>UI Reverse Serial number(s) - not currently used</inlineHelpText>
        <label>Reverse Serials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_txncomment__c</fullName>
        <inlineHelpText>This is the PO Receipt transaction comments</inlineHelpText>
        <label>Txn Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptr_usefifoseq__c</fullName>
        <label>Use Fifo Sequence Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts (Buying Div)</relationshipLabel>
        <relationshipName>divporcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Inventory Division  for this PO Receipt</inlineHelpText>
        <label>Inventory Div</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts (Inventory Div)</relationshipLabel>
        <relationshipName>invdivporcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_loccomments_chkboxind__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When Checked, Location Comment of the PO is initialized with Receipt Number.</inlineHelpText>
        <label>Initialize Location Comment with Rcpt No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_lotno_chkboxind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When Checked, Lot Number of the PO is initialized with Receipt Number.</inlineHelpText>
        <label>Initialize Lot Number with Receipt No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_packslipno__c</fullName>
        <inlineHelpText>Packing Slip Identification</inlineHelpText>
        <label>Packing Slip Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_pohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Purchase Order Number</inlineHelpText>
        <label>Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts</relationshipLabel>
        <relationshipName>ZZ_PO_Rcpts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the PO line for this PO Receipt</inlineHelpText>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts</relationshipLabel>
        <relationshipName>ZZ_PO_Rcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_poordno__c</fullName>
        <inlineHelpText>This is the Purchase Order Number of the PO Receipt.</inlineHelpText>
        <label>PO Order No</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_rcptno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receipt Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_rcvall__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>UI field which, when checked, means to receive all selected lines</inlineHelpText>
        <label>Receive All PO Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr__c</fullName>
        <inlineHelpText>This is the Address where the Purchase Order is Shipped.</inlineHelpText>
        <label>Ship To Address</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr_city__c</fullName>
        <inlineHelpText>This is the Ship-to Address City for this PO Receipt</inlineHelpText>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr_contactemail__c</fullName>
        <inlineHelpText>This is the Ship-to Address Contact for this PO Receipt</inlineHelpText>
        <label>Ship To Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr_country__c</fullName>
        <inlineHelpText>This is the Ship-to Address Country for this PO Receipt</inlineHelpText>
        <label>Ship To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr_fax__c</fullName>
        <inlineHelpText>This is the Ship-to Address Fax for this PO Receipt</inlineHelpText>
        <label>Ship To Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr_phone__c</fullName>
        <inlineHelpText>This is the Ship-to Address Phone for this PO Receipt</inlineHelpText>
        <label>Ship To Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr_stateprov__c</fullName>
        <inlineHelpText>This is the Ship-to Address State/Provence for this PO Receipt</inlineHelpText>
        <label>Ship to State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr_street__c</fullName>
        <inlineHelpText>This is the Ship-to Address Street for this PO Receipt</inlineHelpText>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr_website__c</fullName>
        <inlineHelpText>This is the Ship-to Address Website for this PO Receipt</inlineHelpText>
        <label>Web Site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_shiptoaddr_zippostalcode__c</fullName>
        <inlineHelpText>This is the Ship-to Address City for this PO Receipt</inlineHelpText>
        <label>Ship To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site for this PO Receipt</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ - PO Rcpts</relationshipLabel>
        <relationshipName>ZZ_PO_Rcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_txndate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_usrno__c</fullName>
        <inlineHelpText>This is the User Number for this PO Receipt</inlineHelpText>
        <label>User No</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_vendname__c</fullName>
        <inlineHelpText>Vendor Name</inlineHelpText>
        <label>Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_vendorno__c</fullName>
        <inlineHelpText>This is the Vendor Number for this PO Receipt</inlineHelpText>
        <label>VendorNo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ZZ - PO Rcpt</label>
    <nameField>
        <label>ZZ - PO Rcpt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ - PO Rcpts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>